# photon

./: .gitignore  Cargo.toml
src/: app.rs  core.rs  main.rs
src/app/: widgets.rs
src/core/: audio.rs  effect.rs  engine.rs  playback.rs
src/core/effect/: retrigger.rs  trance_gate.rs
