[package]
name = "photon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
cpal = "0.13.5"
crossterm = "0.24.0"
env_logger = "0.9.0"
log = "0.4.17"
rb = "0.4.0"
symphonia = { version = "0.5.1", features = ["mp3"] }
