[package]
name = "photon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
cpal = "0.13.5"
eframe = "0.18.0"
enum-iterator = "1.1.3"
log = "0.4.17"
log_buffer = "1.2.0"
rtrb = "0.2.2"
simplelog = "0.12.0"
symphonia = { version = "0.5.1", features = ["mp3"] }
